# PlatypOUs-Mobile-Robot-Platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_docker_image  build_workspace  entrypoint.bash  platypous  platypous_docker  platypous_robot  platypous_sim  run.bash  start_robot_basic  start_robot_basic_perm  start_robot_full  start_robot_full_perm  start_script.bash  start_simulation_basic  start_simulation_full  start_simulation_full_web
.github/workflows/: build_docker_image.yml
docker/: Dockerfile  docker_entrypoint.bash  entrypoint.bash
ros/src/: README.md
ros/src/auto_controller/: CMakeLists.txt  package.xml
ros/src/auto_controller/launch/: auto_controller.launch
ros/src/auto_controller/msg/: Info.msg
ros/src/auto_controller/params/: auto_controller.yaml
ros/src/auto_controller/src/: auto_controller.h  auto_controller_node.cpp  pid_controller.h
ros/src/eeg_node/: CMakeLists.txt  package.xml
ros/src/eeg_node/src/: client1.py  eeg_node.py
ros/src/iris_lama_ros/src/: slam2d_ros.cpp
ros/src/map_to_image/: CMakeLists.txt  package.xml
ros/src/map_to_image/src/: map_to_image_node.cpp
ros/src/map_to_image/srv/: Convert.srv  RobotPose.srv
ros/src/odrive_node/: CMakeLists.txt  package.xml
ros/src/odrive_node/launch/: odrive_node.launch
ros/src/odrive_node/src/: odrive_node.py
ros/src/platy_bringup/: CMakeLists.txt  package.xml
ros/src/platy_bringup/launch/: basic.launch
ros/src/platy_bringup/params/: joystick.yaml  teleop.yaml
ros/src/platy_driver/: CMakeLists.txt  package.xml
ros/src/platy_driver/scripts/: odrive_driver.py  odrive_node.py
ros/src/platypous_driver/: CMakeLists.txt  package.xml
ros/src/platypous_driver/scripts/: lidar_safety_node.py  odrive_driver.py  odrive_node.py
ros/src/platypous_driver/src/: led_driver_node.cpp
ros/src/platypous_gazebo/: CMakeLists.txt  package.xml
ros/src/platypous_gazebo/launch/: empty.launch  office.launch
ros/src/platypous_gazebo/params/: joystick.yaml  localization.yaml  teleop.yaml
ros/src/platypous_gazebo/rviz/: gmapping.rviz
ros/src/platypous_gazebo/scripts/: dummy_motor_driver.py
ros/src/platypous_gazebo/urdf/: platypous.xacro
ros/src/platypous_gazebo/worlds/: empty.world  office.world
ros/src/platypous_launch/: CMakeLists.txt  package.xml
ros/src/platypous_launch/launch/: basic.launch  camera_d455.launch  camera_t265.launch  ekf.launch  explore.launch  full.launch  gmapping.launch  iris_lama_loc.launch  iris_lama_slam.launch  joy_teleop.launch  joystick_teleop.launch  lidar.launch  main.launch  mobile_controller.launch  motor_driver.launch  navigation.launch  rtabmap.launch  rtabmap_odom.launch  rviz_slam.launch  simulation.launch  simulation_basic.launch  simulation_full.launch  status.launch  system_control.launch
ros/src/platypous_launch/params/: costmap_common.yaml  costmap_local.yaml  gmapping.yaml  joystick.yaml  lidar.yaml  local_planner.yaml  localization.yaml  nav_costmap_common.yaml  nav_costmap_global.yaml  nav_costmap_local.yaml  nav_global_planner.yaml  nav_local_planner.yaml  nav_move_base.yaml  system_control.yaml  teleop.yaml  twist_mux.yaml  wheel_odom_ekf.yaml
ros/src/platypous_launch/scripts/: system_control_node.py
ros/src/platypous_msgs/: CMakeLists.txt  package.xml
ros/src/platypous_msgs/msg/: MapImageData.msg  PlatypousStatus.msg
ros/src/platypous_msgs/srv/: SendGoal.srv
ros/src/platypous_navigation/: CMakeLists.txt  package.xml
ros/src/platypous_navigation/launch/: navigation.launch
ros/src/platypous_navigation/params/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  local_planner.yaml
ros/src/platypous_status/: CMakeLists.txt  package.xml
ros/src/platypous_status/src/: map_to_image.cpp  monitor.py  status_publisher.cpp
ros/src/platypous_web_interface/: CMakeLists.txt  package.xml
ros/src/platypous_web_interface/src/: map_to_image_node.cpp
scripts/: start_basic.bash  start_full.bash
web/: README.md  index.html  index.js  package-lock.json  package.json  server.js
web/GUI/: camera_image.js  dashboard.js  diagnostics.js  index.html  joystick_test.html  main_vue.js  map.js  navigation.js  proof.js  socket_io.js  teleop.js
web/GUI/dependencies/: bootstrap-icons.js  bootstrap-vue.css
web/GUI/images/: pullup.kra
