<?xml version="1.0"?>
<package format="2">
  <name>platypous_driver</name>
  <version>0.0.0</version>
  <description>The platypous_driver package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
