<?xml version="1.0"?>
<package format="2">
  <name>platypous_gazebo</name>
  <version>0.0.0</version>
  <description>The platypous_gazebo package</description>

  <maintainer email="borsa@todo.todo">borsa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
