<?xml version="1.0"?>
<package format="2">
  <name>platypous_launch</name>
  <version>0.0.0</version>
  <description>The platypous_launch package</description>

  <maintainer email="platy@todo.todo">platy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
