<?xml version="1.0"?>
<package format="2">
  <name>platypous_status</name>
  <version>0.0.0</version>
  <description>The platypous_status package</description>

  <maintainer email="borsa@todo.todo">borsa</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>platypous_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>platypous_msgs</exec_depend>
</package>
